--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>sending happy</title>
-    <link rel="stylesheet" href="work2.css">
+    <link rel="stylesheet" href="work.css">
 </head>
 <body>
       <div class="main-container">
